* All Code: Added Generics/Templating